--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>GraphqlDemo</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.16.0/themes/prism.css" />
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
